--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "decay": "^1.0.12",
     "react": "^18.0.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.0.0",
